--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="navigation_bar_height">36dp</dimen>
+    <dimen name="gallery_preferences_height">24dp</dimen>
 </resources>
