--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#2B2B2B</color>
+    <color name="colorPrimaryDark">#181817</color>
+    <color name="colorAccent">#85BF25</color>
+    <color name="colorUpvote">#85BF25</color>
+    <color name="colorUpovotePB">#38491B</color>
+    <color name="colorDownvote">#EE4444</color>
+    <color name="colorDownvotePB">#572424</color>
+    <color name="colorName">#4E76C9</color>
 </resources>
