--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="navigation_bar_height">72dp</dimen>
+    <dimen name="navigation_bar_width">104dp</dimen>
     <dimen name="gallery_preferences_height">36dp</dimen>
 </resources>
