--- a/app/src/main/res/layout-land/activity_subreddit.xml
+++ b/app/src/main/res/layout-land/activity_subreddit.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/subredditInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -35,7 +35,7 @@
         android:layout_height="@dimen/gallery_preferences_height"
         app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/subredditInput" />
 
     <!--
     The attribute "app:layout_constraintHeight_default" coupled with "layout_height="0dp"
