--- a/app/src/main/res/layout-port/activity_subreddit.xml
+++ b/app/src/main/res/layout-port/activity_subreddit.xml
@@ -7,7 +7,7 @@
     tools:context="com.imgurisnotimgur.SubredditActivity" >
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/subredditInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -37,7 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/subredditInput" />
 
     <!--
     The attribute "app:layout_constraintHeight_default" coupled with "layout_height="0dp"
