--- a/app/src/main/res/layout/gallery_list_item.xml
+++ b/app/src/main/res/layout/gallery_list_item.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.imgurisnotimgur.StretchImageView
+            <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
