--- a/app/src/main/res/layout-land/navigation_bar.xml
+++ b/app/src/main/res/layout-land/navigation_bar.xml
@@ -36,4 +36,12 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/search_act" />
+
+    <Button
+        android:id="@+id/profileAct"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/profile_act" />
 </LinearLayout>
