--- a/app/src/main/res/layout-port/navigation_bar.xml
+++ b/app/src/main/res/layout-port/navigation_bar.xml
@@ -8,6 +8,7 @@
     <Button
         android:id="@+id/subredditAct"
         style="@style/Widget.AppCompat.Button.Colored"
+        android:textSize="11sp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -16,6 +17,7 @@
     <Button
         android:id="@+id/galleryAct"
         style="@style/Widget.AppCompat.Button.Colored"
+        android:textSize="11sp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -24,6 +26,7 @@
     <Button
         android:id="@+id/uploadAct"
         style="@style/Widget.AppCompat.Button.Colored"
+        android:textSize="11sp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -32,8 +35,18 @@
     <Button
         android:id="@+id/searchAct"
         style="@style/Widget.AppCompat.Button.Colored"
+        android:textSize="11sp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/search_act" />
+
+    <Button
+        android:id="@+id/profileAct"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:textSize="11sp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:text="@string/profile_act" />
 </LinearLayout>
