Changed accent color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
 
     <color name="colorPrimary">#85BF25</color>
     <color name="colorPrimaryDark">#38491B</color>
-    <color name="colorAccent">#2B2B2B</color>
+    <color name="colorAccent">#BF2537</color>
     <color name="colorUpvote">#85BF25</color>
     <color name="colorUpovotePB">#38491B</color>
     <color name="colorDownvote">#EE4444</color>
