--- a/app/src/main/res/layout-land/activity_subreddit.xml
+++ b/app/src/main/res/layout-land/activity_subreddit.xml
@@ -28,15 +28,6 @@
         app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <include
-        android:id="@+id/includePrefs"
-        layout="@layout/gallery_preferences"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/gallery_preferences_height"
-        app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subredditInput" />
-
     <!--
     The attribute "app:layout_constraintHeight_default" coupled with "layout_height="0dp"
     is needed to adjust recyclerView's height based on the other elements
@@ -45,12 +36,13 @@
         android:id="@+id/rv_gallery"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         app:layoutManager="android.support.v7.widget.StaggeredGridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
         app:layout_constraintHeight_default="wrap"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/includePrefs"
+        app:layout_constraintTop_toBottomOf="@+id/subredditInput"
         app:layout_constraintWidth_default="wrap"
         app:spanCount="4" />
 
