--- a/app/src/main/res/layout-port/activity_subreddit.xml
+++ b/app/src/main/res/layout-port/activity_subreddit.xml
@@ -35,7 +35,8 @@
     -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_gallery"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_default="spread"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         app:layoutManager="android.support.v7.widget.StaggeredGridLayoutManager"
