--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -46,30 +46,33 @@
                 app:layout_constraintStart_toEndOf="@+id/commentAuthor"
                 app:layout_constraintTop_toTopOf="@id/commentAuthor" />
 
-            <TextView
-                android:id="@+id/commentContent"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text=""
-                android:textColor="@color/colorAccent"
-                android:scrollHorizontally="false"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/commentAuthor" />
-
-            <TextView
-                android:id="@+id/commentPoints"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:text="322 Points"
-                android:textSize="12sp"
+                android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/commentContent" />
+                app:layout_constraintTop_toBottomOf="@id/commentAuthor">
+
+                <TextView
+                    android:id="@+id/commentContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollHorizontally="false"
+                    android:text=""
+                    android:textColor="@color/colorAccent" />
+
+                <TextView
+                    android:id="@+id/commentPoints"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="322 Points"
+                    android:textSize="12sp" />
+            </LinearLayout>
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
