--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <include
-        android:id="@+id/includePrefs"
-        layout="@layout/search_preferences"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/gallery_preferences_height"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <SearchView
         android:id="@+id/searchInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/includePrefs"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_default="wrap" />
 
+    <include
+        android:id="@+id/includePrefs"
+        layout="@layout/search_preferences"
+        android:layout_width="0dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchInput" />
     <!--
     The attribute "app:layout_constraintHeight_default" coupled with "layout_height="0dp"
     is needed to adjust recyclerView's height based on the other elements
@@ -37,7 +39,7 @@
         app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
         app:layout_constraintHeight_default="wrap"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchInput"
+        app:layout_constraintTop_toBottomOf="@+id/includePrefs"
         app:layout_constraintWidth_default="wrap"
         app:spanCount="4" />
 
