--- a/app/src/main/res/layout/activity_subreddit_image_detail.xml
+++ b/app/src/main/res/layout/activity_subreddit_image_detail.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:scrollHorizontally="false"
             android:text="Look at this cool cat photo!"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorTitle"
             android:textSize="20sp" />
 
         <TextView
