--- a/app/src/main/res/layout-land/activity_upload.xml
+++ b/app/src/main/res/layout-land/activity_upload.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/upload_photo_label"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorTitle"
         android:textSize="36sp"
         app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
         app:layout_constraintStart_toStartOf="parent"
