--- a/app/src/main/res/layout-land/activity_upload.xml
+++ b/app/src/main/res/layout-land/activity_upload.xml
@@ -17,9 +17,60 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="64dp"
+        android:text="@string/upload_photo_label"
+        android:textColor="@color/colorText"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linearLayout"
+        android:layout_width="525dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="64dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/pickUpload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableBottom="@drawable/ic_camera_roll_black_24dp"
+            android:drawablePadding="8dp"
+            android:paddingBottom="36dp"
+            android:paddingTop="36dp"
+            android:text="@string/upload_from_photo_roll" />
+
+        <Button
+            android:id="@+id/cameraUpload"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableBottom="@drawable/ic_photo_camera_black_24dp"
+            android:drawablePadding="8dp"
+            android:paddingBottom="36dp"
+            android:paddingTop="36dp"
+            android:text="@string/upload_from_new_photo" />
+    </LinearLayout>
+
+    <!--<TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/upload_photo_label"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorText"
         android:textSize="36sp"
         app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +80,7 @@
         android:id="@+id/pickUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="8dp"
         android:drawableBottom="@drawable/ic_camera_roll_black_24dp"
@@ -37,6 +89,7 @@
         android:paddingTop="36dp"
         android:text="@string/upload_from_photo_roll"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/cameraUpload"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -52,6 +105,6 @@
         android:text="@string/upload_from_new_photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/includeNavBar"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->
 
 </android.support.constraint.ConstraintLayout>
