--- a/app/src/main/res/layout/activity_image_detail.xml
+++ b/app/src/main/res/layout/activity_image_detail.xml
@@ -29,7 +29,7 @@
                 android:layout_marginTop="16dp"
                 android:scrollHorizontally="false"
                 android:text="Look at this cool cat photo!"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorText"
                 android:textSize="20sp" />
 
             <android.support.constraint.ConstraintLayout
@@ -43,6 +43,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
                     android:text="KittenMitten42"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="parent" />
 
@@ -52,6 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:text="2d"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent" />
 
