--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -30,8 +30,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="FanOfCats98"
-                android:textColor="@color/colorAccent"
+                android:text="@string/username"
+                android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,6 +42,7 @@
                 android:layout_marginStart="4dp"
                 android:text="• 3h"
                 android:textSize="12sp"
+                android:textColor="@color/colorPrimary"
                 app:layout_constraintBottom_toBottomOf="@+id/commentAuthor"
                 app:layout_constraintStart_toEndOf="@+id/commentAuthor"
                 app:layout_constraintTop_toTopOf="@id/commentAuthor" />
@@ -64,13 +65,14 @@
                     android:layout_height="wrap_content"
                     android:scrollHorizontally="false"
                     android:text=""
-                    android:textColor="@color/colorAccent" />
+                    android:textColor="@color/colorText" />
 
                 <TextView
                     android:id="@+id/commentPoints"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="322 Points"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="12sp" />
             </LinearLayout>
         </android.support.constraint.ConstraintLayout>
