--- a/app/src/main/res/layout/subreddit_gallery_list_item.xml
+++ b/app/src/main/res/layout/subreddit_gallery_list_item.xml
@@ -34,7 +34,7 @@
                 android:layout_marginTop="8dp"
                 android:scrollHorizontally="false"
                 android:text="@string/image_title"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorText"
                 android:textSize="12sp" />
 
         </LinearLayout>
