--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -41,6 +41,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/includePrefs"
         app:layout_constraintWidth_default="wrap"
+        android:scrollbars="vertical"
         app:spanCount="4" />
 
     <include
