--- a/app/src/main/res/layout-land/activity_subreddit.xml
+++ b/app/src/main/res/layout-land/activity_subreddit.xml
@@ -44,6 +44,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/subredditInput"
         app:layout_constraintWidth_default="wrap"
+        android:scrollbars="vertical"
         app:spanCount="4" />
 
     <include
