--- a/app/src/main/res/layout-port/activity_gallery.xml
+++ b/app/src/main/res/layout-port/activity_gallery.xml
@@ -29,6 +29,7 @@
         app:layout_constraintHeight_default="wrap"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/includePrefs"
+        android:scrollbars="vertical"
         app:spanCount="2" />
 
     <include
