--- a/app/src/main/res/layout-port/activity_subreddit.xml
+++ b/app/src/main/res/layout-port/activity_subreddit.xml
@@ -45,6 +45,7 @@
         app:layout_constraintHeight_default="wrap"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/subredditInput"
+        android:scrollbars="vertical"
         app:spanCount="2" />
 
     <include
